--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -4,6 +4,10 @@
 * {
   font-family: Montserrat, sans-serif;
   scroll-behavior: smooth;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+
   // outline: red solid 1px;
 }
 
@@ -31,6 +35,7 @@ body {
     flex-direction: column;
     padding: 0 rem(260);
     background-image: url('../images/header-bg.png');
+    background-size: cover;
     width: 100%;
     overflow: hidden;
 
@@ -412,6 +417,149 @@ body {
       width: rem(320);
       height: auto;
     }
+  }
+}
+
+.example {
+  width: 100%;
+  position: relative;
+
+  .example__wrapper {
+    display: flex;
+    flex-direction: column;
+    padding: rem(110) rem(200) 0;
+
+    .example__title {
+      width: 100%;
+
+      h1 {
+        font-size: rem(85);
+        font-weight: 400;
+        max-width: rem(800);
+        font-family: Kudryashev, sans-serif;
+        line-height: 76.5px;
+      }
+    }
+
+    .example__features {
+      padding-top: rem(55);
+
+      ul {
+        display: flex;
+        list-style-type: none;
+        gap: rem(50);
+
+        li {
+          max-width: rem(320);
+
+          h5 {
+            margin: rem(27) 0 rem(15);
+            font-weight: 600;
+            text-transform: uppercase;
+          }
+
+          p {
+            font-size: rem(16);
+            letter-spacing: 1px;
+          }
+        }
+      }
+    }
+
+    .example__slider-appointment {
+      display: flex;
+      width: 100%;
+      justify-content: center;
+
+      .example__slider {
+        display: flex;
+        justify-content: center;
+        margin-top: rem(100);
+        position: relative;
+        z-index: 100;
+
+        img-comparison-slider {
+
+          &:focus {
+            outline: none;
+          }
+
+          img:not(:last-child) {
+            width: rem(450);
+          }
+        }
+
+        .example__slider-after {
+          position: absolute;
+          left: calc(50% - 200px);
+          bottom: rem(20);
+          z-index: 100;
+        }
+      }
+
+      .example__appointment {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-top: rem(120);
+
+        h2 {
+          margin-left: rem(64);
+          font-family: Kudryashev, sans-serif;
+          font-size: rem(85);
+          color: #B68C6E;
+          font-weight: 400;
+        }
+
+        h3 {
+          margin-left: rem(160);
+          font-family: Kudryashev, sans-serif;
+          font-size: rem(120);
+          font-weight: 400;
+          line-height: 93.25px;
+        }
+
+        p {
+          max-width: rem(360);
+          margin-left: rem(160);
+          margin-top: rem(50);
+          font-size: rem(16);
+          font-weight: 500;
+          text-transform: uppercase;
+          line-height: 36.9px;
+
+          span {
+            color: #B78C6E;
+          }
+        }
+
+        .appointment-btn {
+          margin-left: rem(80);
+          z-index: 100;
+
+          span {
+            mask-image: url('../images/appointment-btn/dust/arrow.svg');
+            background-color: #B78C6E;
+          }
+
+          button {
+            color: black;
+          }
+        }
+      }
+    }
+  }
+
+  .example__line {
+    position: absolute;
+    top: 0;
+    right: 12%;
+  }
+
+  .example__background-dots {
+    position: absolute;
+    bottom: 0;
+    right: calc(50% - 500px);
   }
 }
 
@@ -882,6 +1030,79 @@ body {
     }
   }
 
+  .example {
+
+    .example__wrapper {
+      padding: rem(50) rem(0);
+
+      .example__title {
+        padding: 0 rem(14);
+
+        h1 {
+          font-size: rem(37);
+          line-height: 40px;
+        }
+      }
+
+      .example__features {
+        padding: rem(34) rem(14) 0;
+
+        ul {
+          flex-direction: column;
+
+          li {
+            h5 {
+              margin: rem(14) 0 rem(10);
+            }
+          }
+        }
+      }
+
+      .example__slider-appointment {
+        flex-direction: column-reverse;
+
+        .example__appointment {
+          padding: rem(106) rem(14) 0;
+
+          h2 {
+            font-size: rem(37);
+            margin-left: 0;
+            line-height: 40.59px;
+          }
+
+          h3 {
+            font-size: rem(37);
+            margin-left: 0;
+            line-height: 40.59px;
+          }
+
+          p {
+            font-size: rem(18);
+            margin-left: 0;
+            max-width: 80%;
+            line-height: 25px;
+            text-wrap: wrap;
+          }
+
+          .appointment-btn {
+            display: none;
+          }
+        }
+      }
+    }
+
+    .example__background-dots {
+      position: absolute;
+      bottom: 500px;
+      right: 10%;
+      width: 70%;
+    }
+
+    .example__line {
+      right: 0;
+    }
+  }
+
   .clients {
     padding: rem(44) 0 rem(20);
 
@@ -1035,6 +1256,12 @@ body {
     }
   }
 
+  .example {
+    .example__wrapper {
+      padding: rem(110) rem(50) 0;
+    }
+  }
+
   .clients {
     .clients__wrapper {
       margin: rem(110) rem(50) !important;
@@ -1173,6 +1400,7 @@ body {
 
 .swiper-slide {
   display: flex !important;
+  justify-content: center;
 }
 
 .swiper-button-disabled {
@@ -1193,7 +1421,20 @@ body {
   border-right: 1px solid rgba(128, 128, 128, 0.2);
   padding: 0 rem(30);
 
+  &:first-child {
+    border-left: none;
+  }
+
+  &:last-child {
+    border-right: none;
+  }
+
+  .client-photo {
+    width: rem(120);
+  }
+
   .client-name {
+    margin-top: rem(31);
     font-family: Kudryashev, sans-serif;
     text-align: center;
     font-size: rem(20);
@@ -1202,11 +1443,8 @@ body {
   }
 
 
-  .client-photo {
-    width: rem(120);
-  }
-
   .client-desc {
+    margin-top: rem(10);
     text-align: center;
     line-height: rem(23);
     font-size: rem(14);
@@ -1218,6 +1456,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: rem(30);
 
   ul {
     display: flex;
@@ -1231,3 +1470,5 @@ body {
     }
   }
 }
+
+/* ---------------- comparison-slider ----------------- */
