--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -36,6 +36,7 @@ body {
   padding: 0 16.25rem;
   background-image: url("../images/header-bg.png");
   background-size: cover;
+  background-position: center center;
   width: 100%;
   overflow: hidden;
 }
@@ -58,7 +59,7 @@ body {
 }
 .header .header__wrapper .nav .nav__info .nav_address {
   font-size: 14px;
-  width: 242px;
+  max-width: 242px;
   color: #fff;
   line-height: 21.76px;
   font-weight: 500;
@@ -68,6 +69,9 @@ body {
   gap: 2.25rem;
   padding-left: 14.0625rem;
   z-index: 10;
+}
+.header .header__wrapper .nav .nav__social a:hover {
+  animation: ringShake 2s ease 0s 1 normal forwards;
 }
 .header .header__wrapper .nav .nav__phone {
   display: flex;
@@ -85,6 +89,11 @@ body {
   font-weight: 700;
   line-height: 26.4px;
   letter-spacing: 0.05em;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.header .header__wrapper .nav .nav__phone .nav__number:hover {
+  transform: translateY(3px) scale(102%);
 }
 .header .header__wrapper .nav .nav__phone .nav__desc {
   display: block;
@@ -92,6 +101,12 @@ body {
   font-size: 12px;
   font-weight: 700;
   line-height: 14.63px;
+  border-bottom: 2px solid #D5B7A0;
+  cursor: pointer;
+  transition: border-bottom-color 0.5s;
+}
+.header .header__wrapper .nav .nav__phone .nav__desc:hover {
+  border-bottom: 2px solid #fff;
 }
 .header .header__wrapper .main {
   display: flex;
@@ -352,6 +367,7 @@ body {
   background-image: url("../images/procedure-promo.png");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   width: 50%;
 }
 .procedure .procedure__banner img {
@@ -575,7 +591,7 @@ body {
   display: flex;
   flex-direction: column;
   list-style: none;
-  padding: 0;
+  padding-top: 0.625rem;
   gap: 1.0625rem;
 }
 .footer .footer__wrapper .footer__menu ul li a {
@@ -587,6 +603,7 @@ body {
   flex-direction: column;
   margin-left: 10rem;
   margin-top: 6.0625rem;
+  gap: 0.625rem;
 }
 .footer .footer__wrapper .footer__contacts h3 {
   color: #fff;
@@ -597,14 +614,17 @@ body {
 .footer .footer__wrapper .footer__contacts .footer__address {
   display: flex;
   flex-direction: column;
+  gap: 0.3125rem;
 }
 .footer .footer__wrapper .footer__contacts .footer__address span {
   color: #FFFFFF;
 }
 .footer .footer__wrapper .footer__contacts .footer__address a {
-  padding-top: 0.625rem;
   color: #FFFFFF;
   text-decoration: underline;
+}
+.footer .footer__wrapper .footer__contacts .footer__mail {
+  padding-top: 1.125rem;
 }
 .footer .footer__wrapper .footer__contacts .footer__mail h4 {
   font-size: 0.75rem;
@@ -613,6 +633,11 @@ body {
 }
 .footer .footer__wrapper .footer__contacts .footer__mail a {
   color: #ffffff;
+  padding-top: 0.625rem;
+  display: block;
+}
+.footer .footer__wrapper .footer__contacts .footer__socials {
+  padding-top: 1.125rem;
 }
 .footer .footer__wrapper .footer__contacts .footer__socials h4 {
   font-size: 0.75rem;
@@ -622,8 +647,8 @@ body {
 .footer .footer__wrapper .footer__contacts .footer__socials ul {
   display: flex;
   list-style-type: none;
-  padding: 0;
   gap: 0.9375rem;
+  padding-top: 0.625rem;
 }
 .footer .footer__wrapper .footer__phone {
   display: flex;
@@ -674,6 +699,7 @@ body {
 .footer .footer__copyright .footer__politics {
   cursor: pointer;
   text-decoration: underline;
+  color: #DCD5CE;
 }
 
 /* ---------------- MEDIA-QUERY 430px ----------------- */
@@ -870,6 +896,17 @@ body {
   .example .example__wrapper .example__slider-appointment {
     flex-direction: column-reverse;
   }
+  .example .example__wrapper .example__slider-appointment .example__slider img-comparison-slider {
+    width: 100%;
+  }
+  .example .example__wrapper .example__slider-appointment .example__slider img-comparison-slider img:not(:last-child) {
+    width: 100% !important;
+    height: auto;
+  }
+  .example .example__wrapper .example__slider-appointment .example__slider .example__slider-after {
+    left: 0;
+    bottom: -1.25rem;
+  }
   .example .example__wrapper .example__slider-appointment .example__appointment {
     padding: 6.625rem 0.875rem 0;
   }
@@ -1000,6 +1037,7 @@ body {
   .footer .footer__copyright .footer__politics {
     color: inherit;
     font-size: inherit;
+    text-decoration: none;
   }
   .swiper-slide {
     display: flex !important;
@@ -1081,12 +1119,13 @@ body {
   width: 21.5625rem;
   height: 10rem;
   transition: transform 0.5s;
+  cursor: pointer;
 }
 .appointment-btn:hover {
   transform: scale(105%);
 }
 .appointment-btn:active {
-  transform: scale(95%);
+  transform: scale(98%);
 }
 .appointment-btn img {
   position: absolute;
@@ -1110,6 +1149,7 @@ body {
   font-weight: 600;
   line-height: 30.48px;
   letter-spacing: 0.05em;
+  cursor: pointer;
 }
 
 /* ---------------- swiper ----------------- */
@@ -1182,6 +1222,27 @@ body {
   align-items: center;
 }
 
-/* ---------------- comparison-slider ----------------- */
+/* ---------------- animation ----------------- */
+@keyframes ringShake {
+  0%, 100% {
+    transform: rotate(0deg);
+    transform-origin: 50% 50%;
+  }
+  10% {
+    transform: rotate(8deg);
+  }
+  20%, 40%, 60% {
+    transform: rotate(-10deg);
+  }
+  30%, 50%, 70% {
+    transform: rotate(10deg);
+  }
+  80% {
+    transform: rotate(-8deg);
+  }
+  90% {
+    transform: rotate(8deg);
+  }
+}
 
 /*# sourceMappingURL=styles.css.map */
