--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -101,6 +101,8 @@ body {
   font-size: 12px;
   font-weight: 700;
   line-height: 14.63px;
+  background-color: transparent;
+  border: none;
   border-bottom: 2px solid #D5B7A0;
   cursor: pointer;
   transition: border-bottom-color 0.5s;
@@ -385,7 +387,7 @@ body {
 .example .example__wrapper {
   display: flex;
   flex-direction: column;
-  padding: 6.875rem 12.5rem 0;
+  padding: 6.875rem 12.5rem 6.25rem;
 }
 .example .example__wrapper .example__title {
   width: 100%;
@@ -680,8 +682,20 @@ body {
   color: #FFFFFF;
 }
 .footer .footer__wrapper .footer__phone .footer__callback {
-  width: fit-content;
-  border-bottom: 2px solid #DFC6B0;
+  display: block;
+  padding-top: 0.625rem;
+  color: #fff;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 14.63px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid #D5B7A0;
+  cursor: pointer;
+  transition: border-bottom-color 0.5s;
+}
+.footer .footer__wrapper .footer__phone .footer__callback:hover {
+  border-bottom: 2px solid #fff;
 }
 .footer .footer__copyright {
   display: flex;
@@ -700,6 +714,109 @@ body {
   cursor: pointer;
   text-decoration: underline;
   color: #DCD5CE;
+}
+
+.modal {
+  position: fixed;
+  display: flex;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(211, 211, 211, 0.75);
+  overflow: hidden;
+  z-index: 99999;
+  visibility: hidden;
+  opacity: 0;
+}
+.modal .modal__wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 50rem;
+  margin: auto;
+  background-color: #1D1D1E;
+  border-radius: 5px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0;
+  padding: 1.875rem 3.125rem;
+  align-items: center;
+}
+.modal .modal__wrapper .modal__header {
+  display: flex;
+  width: 100%;
+  border-bottom: 1px solid #B78C6E;
+  position: relative;
+}
+.modal .modal__wrapper .modal__header .modal__title {
+  font-family: Kudryashev, sans-serif;
+  font-size: 2.1875rem;
+  color: #fff;
+  letter-spacing: 3px;
+  margin: 0 auto;
+  padding: 0 0 0.3125rem;
+}
+.modal .modal__wrapper .modal__header .close__modal {
+  position: absolute;
+  background-color: transparent;
+  width: 3.125rem;
+  height: 3.125rem;
+  color: #B78C6E;
+  border: none;
+  margin-left: auto;
+  top: 0;
+  right: 0;
+  font-size: 2.5rem;
+  transition: transform 0.3s;
+}
+.modal .modal__wrapper .modal__header .close__modal:hover {
+  transform: rotate(90deg);
+}
+.modal .modal__wrapper .appointment-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1.375rem;
+  margin-top: 1.375rem;
+  width: 55%;
+}
+.modal .modal__wrapper .appointment-form label {
+  display: flex;
+  width: 100%;
+}
+.modal .modal__wrapper .appointment-form label input {
+  padding: 0 2.5rem;
+  width: 100%;
+  height: 4.6875rem;
+  background-color: transparent;
+  border: 2px solid #B68C6E;
+  color: #FFFFFF;
+  font-size: 1.5625rem;
+}
+.modal .modal__wrapper .appointment-form label input::placeholder {
+  color: #504339;
+  transition: 0.3s;
+}
+.modal .modal__wrapper .appointment-form label input:hover::placeholder {
+  color: #FFFFFF;
+  padding-left: 5%;
+}
+.modal .modal__wrapper .appointment-form button {
+  height: 4.6875rem;
+  width: 100%;
+  text-transform: uppercase;
+  background-color: transparent;
+  border: 2px solid #B68C6E;
+  color: #FFFFFF;
+  transition: 0.2s;
+}
+.modal .modal__wrapper .appointment-form button:hover {
+  font-weight: 500;
+  font-size: 1.25rem;
+  color: #B68C6E;
+}
+.modal .modal__wrapper .appointment-form button:active {
+  font-weight: 500;
+  font-size: 1.25rem;
+  color: #B68C6E;
+  transform: scale(95%);
 }
 
 /* ---------------- MEDIA-QUERY 430px ----------------- */
@@ -1039,6 +1156,33 @@ body {
     font-size: inherit;
     text-decoration: none;
   }
+  .modal .modal__wrapper {
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    border-radius: 0;
+    padding: 1.875rem 1.25rem;
+  }
+  .modal .modal__wrapper .modal__header .modal__title {
+    text-align: center;
+    font-size: 1.5625rem;
+  }
+  .modal .modal__wrapper .modal__header .close__modal {
+    top: -10px;
+    font-size: 2.1875rem;
+  }
+  .modal .modal__wrapper .appointment-form {
+    width: 100%;
+  }
+  .modal .modal__wrapper .appointment-form label input {
+    font-size: 0.9375rem;
+  }
+  .modal .modal__wrapper .appointment-form label input::placeholder {
+    font-size: 0.9375rem;
+  }
+  .modal .modal__wrapper .appointment-form button {
+    font-size: 0.75rem;
+  }
   .swiper-slide {
     display: flex !important;
     flex-direction: column;
@@ -1243,6 +1387,38 @@ body {
   90% {
     transform: rotate(8deg);
   }
+}
+@keyframes modalAnim {
+  0% {
+    opacity: 0;
+    visibility: hidden;
+  }
+  100% {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+@keyframes modalCloseAnim {
+  0% {
+    opacity: 1;
+    visibility: visible;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+/* ---------------- modal ----------------- */
+.modal-open {
+  overflow: hidden !important;
+}
+
+.modal-visible {
+  animation: modalAnim 0.5s ease 0s 1 normal forwards;
+}
+
+.modal-hidden {
+  animation: modalCloseAnim 0.5s ease 0s 1 forwards;
 }
 
 /*# sourceMappingURL=styles.css.map */
