--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -21,7 +21,7 @@ body {
   margin: 0 auto;
   background-color: #fff;
   overflow-x: hidden;
-  max-width: 1920px
+  max-width: 1920px;
   // outline: red solid 1px;
 }
 
@@ -111,6 +111,8 @@ body {
           font-size: 12px;
           font-weight: 700;
           line-height: 14.63px;
+          background-color: transparent;
+          border: none;
           border-bottom: 2px solid #D5B7A0;
           cursor: pointer;
           transition: border-bottom-color .5s;
@@ -449,7 +451,7 @@ body {
   .example__wrapper {
     display: flex;
     flex-direction: column;
-    padding: rem(110) rem(200) 0;
+    padding: rem(110) rem(200) rem(100);
 
     .example__title {
       width: 100%;
@@ -804,8 +806,21 @@ body {
       }
 
       .footer__callback {
-        width: fit-content;
-        border-bottom: 2px solid #DFC6B0;
+        display: block;
+        padding-top: rem(10);
+        color: #fff;
+        font-size: 12px;
+        font-weight: 700;
+        line-height: 14.63px;
+        background-color: transparent;
+        border: none;
+        border-bottom: 2px solid #D5B7A0;
+        cursor: pointer;
+        transition: border-bottom-color .5s;
+
+        &:hover {
+          border-bottom: 2px solid #fff;
+        }
       }
     }
   }
@@ -828,6 +843,122 @@ body {
       cursor: pointer;
       text-decoration: underline;
       color: #DCD5CE;
+    }
+  }
+}
+
+.modal {
+  position: fixed;
+  display: flex;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(211, 211, 211, 0.75);
+  overflow: hidden;
+  z-index: 99999;
+  visibility: hidden;
+  opacity: 0;
+
+  .modal__wrapper {
+    display: flex;
+    flex-direction: column;
+    width: rem(800);
+    margin: auto;
+    background-color: #1D1D1E;
+    border-radius: 5px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0;
+    padding: rem(30) rem(50);
+    align-items: center;
+
+    .modal__header {
+      display: flex;
+      width: 100%;
+      border-bottom: 1px solid #B78C6E;
+      position: relative;
+
+      .modal__title {
+        font-family: Kudryashev, sans-serif;
+        font-size: rem(35);
+        color: #fff;
+        letter-spacing: 3px;
+        margin: 0 auto;
+        padding: 0 0 rem(5);
+      }
+
+      .close__modal {
+        position: absolute;
+        background-color: transparent;
+        width: rem(50);
+        height: rem(50);
+        color: #B78C6E;
+        border: none;
+        margin-left: auto;
+        top: 0;
+        right: 0;
+        font-size: rem(40);
+        transition: transform .3s;
+
+        &:hover {
+          transform: rotate(90deg);
+        }
+      }
+    }
+
+    .appointment-form {
+      display: flex;
+      flex-direction: column;
+      gap: rem(22);
+      margin-top: rem(22);
+      width: 55%;
+
+      label {
+        display: flex;
+        width: 100%;
+
+        input {
+          padding: 0 rem(40);
+          width: 100%;
+          height: rem(75);
+          background-color: transparent;
+          border: 2px solid #B68C6E;
+          color: #FFFFFF;
+          font-size: rem(25);
+
+          &::placeholder {
+            color: #504339;
+            transition: .3s;
+          }
+
+          &:hover::placeholder {
+            color: #FFFFFF;
+            padding-left: 5%;
+          }
+        }
+      }
+
+      button {
+        height: rem(75);
+        width: 100%;
+        text-transform: uppercase;
+        background-color: transparent;
+        border: 2px solid #B68C6E;
+        color: #FFFFFF;
+        transition: .2s;
+
+        &:hover {
+          font-weight: 500;
+          font-size: rem(20);
+          color: #B68C6E;
+        }
+
+        &:active {
+          font-weight: 500;
+          font-size: rem(20);
+          color: #B68C6E;
+          transform: scale(95%);
+        }
+      }
     }
   }
 }
@@ -1277,6 +1408,47 @@ body {
     }
   }
 
+  .modal {
+
+    .modal__wrapper {
+      width: 100%;
+      height: 100%;
+      justify-content: center;
+      border-radius: 0;
+      padding: rem(30) rem(20);
+
+      .modal__header {
+        .modal__title {
+          text-align: center;
+          font-size: rem(25);
+        }
+
+        .close__modal {
+          top: -10px;
+          font-size: rem(35);
+        }
+      }
+
+      .appointment-form {
+        width: 100%;
+
+        label {
+          input {
+            font-size: rem(15);
+          }
+
+          input::placeholder {
+            font-size: rem(15);
+          }
+        }
+
+        button {
+          font-size: rem(12);
+        }
+      }
+    }
+  }
+
   .swiper-slide {
     display: flex !important;
     flex-direction: column;
@@ -1553,4 +1725,40 @@ body {
   90% {
     transform: rotate(8deg);
   }
+}
+
+@keyframes modalAnim {
+  0% {
+    opacity: 0;
+    visibility: hidden;
+  }
+  100% {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+@keyframes modalCloseAnim {
+  0% {
+    opacity: 1;
+    visibility: visible;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+/* ---------------- modal ----------------- */
+
+.modal-open {
+  overflow: hidden !important;
+}
+
+.modal-visible {
+  animation: modalAnim .5s ease 0s 1 normal forwards;
+}
+
+.modal-hidden {
+  animation: modalCloseAnim .5s ease 0s 1 forwards;
 }
