--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -7,8 +7,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-
-  // outline: red solid 1px;
+  outline: red solid 1px;
 }
 
 a {
@@ -22,7 +21,6 @@ body {
   background-color: #fff;
   overflow-x: hidden;
   max-width: 1920px;
-  // outline: red solid 1px;
 }
 
 .header {
@@ -1473,7 +1471,7 @@ body {
   }
 
   .sidenav {
-    position: absolute;
+    position: fixed;
     display: flex;
     top: 0;
     right: 0;
